Removed unnecessary JavaDoc comments from controllers and DTO classes to clean up the codebase. - Enhanced UserServiceImpl to include password encoding and role mapping from UserDTO to Role enum. - Added authenticateUser method in UserService and UserServiceImpl for handling user authentication and JWT generation. - Updated AdvertisementServiceImpl to correctly associate categories and handle non-authenticated access. - Ensured only one UserNotAuthenticatedException class exists to avoid conflicts. - Enabled method-level security in SecurityConfig with @EnableMethodSecurity.